<?xml version="1.0"?>
<package>
  <name>jsk_apc2016_common</name>
  <version>0.2.4</version>
  <description>The jsk_apc2016_common package</description>

  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>
  <maintainer email="niitani@jsk.imi.i.u-tokyo.ac.jp">Yusuke Niitani</maintainer>
  <author email="www.kentaro.wada@gmail.com">Kentaro Wada</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>rostest</test_depend>
  <test_depend>jsk_tools</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
